--- a/fitnessbuddy/doc/fitnessbuddy.yml
+++ b/fitnessbuddy/doc/fitnessbuddy.yml
@@ -108,16 +108,39 @@ paths:
         '200':
           description: Successfully retrieved list of users
           content:
-            application/json:
+            application/vnd.mason+json:
               example:
-              - name: user-1
-                email: user-1@email.com
-                age: 22
-                user_creation_date: "2023-02-11T13:01:56"
-              - name: user-2
-                email: user-2@email.com
-                age: 44
-                user_creation_date: "2023-02-11T13:01:56"
+                '@controls':
+                  fitnessbuddy:add-user:
+                    encoding: json
+                    href: /api/users/
+                    method: POST
+                    schema:
+                      properties:
+                        age:
+                          description: User's age
+                          type: number
+                        email:
+                          description: User's email
+                          type: string
+                        name:
+                          description: User's name
+                          type: string
+                        user_creation_date:
+                          description: User's creation datetime as a string
+                          type: string
+                          title: Add user
+                    self:
+                      href: /api/users/
+                users:
+                - age: 21.0
+                  email: some1@email.com
+                  name: name1
+                  user_creation_date: '2023-01-01T01:00:00'
+                - age: 23.0
+                  email: some2@email.com
+                  name: name1
+                  user_creation_date: '2023-01-01T01:00:00'
         '404':
           description: Not found
           content:
@@ -152,7 +175,7 @@ paths:
           content:
             application/vnd.mason+json:
               example:
-                controls:
+                "@controls":
                   self:
                     href: /api/users/1/
                   delete:
@@ -218,12 +241,52 @@ paths:
         '200':
           description: Successfully retrieved user information
           content:
-            application/json:
-              example:
-              - name: user-1
-                email: user-1@email.com
-                age: 22
-                user_creation_date: "2023-02-11T13:01:56"
+            application/vnd.mason+json:
+              example: 
+                '@controls':
+                  edit:
+                    encoding: json
+                    href: /api/users/1/
+                    method: PUT
+                    schema:
+                      properties:
+                        age:
+                          description: User's age
+                          type: number
+                        email:
+                          description: User's email
+                          type: string
+                        name:
+                          description: User's name
+                          type: string
+                        user_creation_date:
+                          description: User's creation datetime as a string
+                          type: string
+                      required:
+                      - name
+                      - email
+                      - age
+                      - user_creation_date
+                      type: object
+                    title: Edit user
+                  fitnessbuddy:delete:
+                    href: /api/users/1/
+                    method: DELETE
+                    title: Delete user
+                  fitnessbuddy:exercises-all:
+                    href: /api/users/1/exercises/
+                    title: All exercises
+                  fitnessbuddy:measurements-all:
+                    href: /api/users/1/measurements/
+                    title: All measurements
+                  self:
+                    href: /api/users/1/
+                user:
+                  age: 21.0
+                  email: some1@email.com
+                  name: name1
+                  user_creation_date: '2023-01-01T01:00:00'
+
         '404':
           description: Not found
           content:
@@ -304,18 +367,46 @@ paths:
         '200':
           description: Succesfully retrieved list of exercises
           content:
-            application/json:
+            application/vnd.mason+json:
               example:
-              - name: Basketball
-                duration: 2656.0
-                date: "2023-02-11T13:01:56"
-                user_id: 1
-                id: 1
-              - name: Football
-                duration: 2656.0
-                date: "2023-02-11T13:01:56"
-                user_id: 1
-                id: 2
+                '@controls':
+                  fitnessbuddy:add-exercise:
+                    encoding: json
+                    href: /api/users/1/exercises/
+                    method: POST
+                    schema:
+                      properties:
+                        date:
+                          description: Datetime of the exercise as a string
+                          type: string
+                        duration:
+                          description: Duration of exercise
+                          type: number
+                        name:
+                          description: Name of the exercise
+                          type: string
+                        user_id:
+                          description: User id
+                          type: number
+                      required:
+                      - name
+                      - date
+                      - user_id
+                      type: object
+                    title: fitnessbuddy:add-exercise
+                  self:
+                    href: /api/users/1/exercises/
+                exercises:
+                - date: '2023-01-10T11:00:00'
+                  duration: 100.0
+                  id: 1
+                  name: laji1
+                  user_id: 1
+                - date: '2023-01-11T12:00:00'
+                  duration: 200.0
+                  id: 2
+                  name: laji2
+                  user_id: 1
         '404':
           description: Not found
           content:
@@ -350,7 +441,7 @@ paths:
           content:
             application/vnd.mason+json:
               example:
-                controls:
+                "@controls":
                   self:
                     href: /api/users/1/exercises/1/
                   delete:
@@ -421,13 +512,18 @@ paths:
         '200':
           description: Successfully retrieved exercise information
           content:
-            application/json:
+            application/vnd.mason+json:
               example:
-              - name: Basketball
-                duration: 2656.0
-                date: "2023-02-11T13:01:56"
-                user_id: 1
-                id: 1
+                '@controls':
+                  self:
+                    href: /api/users/1/exercises/1/
+                exercise:
+                  date: '2023-01-10T11:00:00'
+                  duration: 100.0
+                  id: 1
+                  name: laji1
+                  user_id: 1
+
         '400':
           description: User id doesn't match the exercise's user id
           content:
@@ -515,20 +611,50 @@ paths:
         '200':
           description: Succesfully retrieved list of measurements
           content:
-            application/json:
+            application/vnd.mason+json:
               example:
-              - date: "2023-02-11T13:01:56"
-                weight: 66.0
-                calories_in: 2659.0
-                calories_out: 2664.0
-                user_id: 1
-                id: 1
-              - date: "2023-02-11T13:01:56"
-                weight: 66.5
-                calories_in: 2600.0
-                calories_out: 2555.0
-                user_id: 1
-                id: 2
+                '@controls':
+                  fitnessbuddy:add-measurement:
+                    encoding: json
+                    href: /api/users/3/measurements/
+                    method: POST
+                    schema:
+                      properties:
+                        calories_in:
+                          description: Calories eaten
+                          type: number
+                        calories_out:
+                          description: Calories burnt
+                          type: number
+                        date:
+                          description: Datetime of the measurement as a string
+                          type: string
+                        user_id:
+                          description: User id
+                          type: number
+                        weight:
+                          description: Weight measurement
+                          type: number
+                      required:
+                      - date
+                      - user_id
+                      type: object
+                    title: fitnessbuddy:addmeasurement
+                  self:
+                    href: /api/users/3/measurements/
+                measurements:
+                - calories_in: 1000.0
+                  calories_out: 100.0
+                  date: '2023-01-01T01:00:00'
+                  id: 1
+                  user_id: 3
+                  weight: 10.1
+                - calories_in: 1100.0
+                  calories_out: 200.0
+                  date: '2023-01-02T01:00:00'
+                  id: 2
+                  user_id: 3
+                  weight: 20.2
         '404':
           description: Not found
           content:
@@ -564,7 +690,7 @@ paths:
           content:
             application/vnd.mason+json:
               example:
-                controls:
+                "@controls":
                   self:
                     href: /api/users/1/measurements/1/
                   delete:
@@ -637,14 +763,18 @@ paths:
         '200':
           description: Successfully retrieved measurements information
           content:
-            application/json:
+            application/vnd.mason+json:
               example:
-              - date: "2023-02-11T13:01:56"
-                weight: 66.0
-                calories_in: 2659.0
-                calories_out: 2664.0
-                user_id: 1
-                id: 1
+                '@controls':
+                  self:
+                    href: /api/users/3/measurements/1/
+                measurement:
+                  calories_in: 1000.0
+                  calories_out: 100.0
+                  date: '2023-01-01T01:00:00'
+                  id: 1
+                  user_id: 3
+                  weight: 10.1
         '400':
           description: User id doesn't match the measurements's user id
           content:
